# OwlPort-Desktop

./: .env.withrust  .gitignore  README.md  index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
certs/: owlnest_test_cert.pem  owlnest_test_key_decrypted.pem
src/: App.vue  AppWrapper.vue  Entry.vue  MainWindow.vue  NoConfig.vue  i18n.js  main.js  router.js  style.css  utils.js  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: developer-event-listener.json  main.json  migrated.json  no-config.json  owlnest-blob-transfer.json  owlnest-gossipsub.json  owlnest-messaging.json
src-tauri/permissions/: advertise.toml  app-info.toml  app-panel.toml  autonat.toml  blob-transfer-fs.toml  blob-transfer.toml  config-writer.toml  developer-options.toml  gossipsub.toml  kad.toml  mdns.toml  messaging.toml  read-write-residing-folder.toml  relay.toml  swarm-dial.toml  swarm-get-local-peer-info.toml  swarm-listen.toml  swarm.toml  upnp.toml
src-tauri/src/: error.rs  event.rs  macros.rs  main.rs
src-tauri/src/event/: popup_manager.rs
src-tauri/src/net/: mod.rs
src-tauri/src/net/grpc/: mod.rs
src-tauri/src/net/grpc/protos/: nest_rpc.proto
src-tauri/src/plugins/: config.rs  config_writer.rs  grpc.rs  mod.rs  openssl.rs  owlnest.rs  popup_test.rs
src-tauri/src/plugins/owlnest/: advertise.rs  autonat.rs  blob.rs  blob_transfer.rs  developer_options.rs  gossipsub.rs  kad.rs  mdns.rs  messaging.rs  relay.rs  statistics.rs  swarm_plugin.rs  upnp.rs
src/assets/i18n/: en-US.json
src/components/: AddressDisplay.vue  ControlledButton.vue  EmptyWindow.vue  EntryExpand.vue  Greet.vue  OverlayHandler.vue  PeerSearchBar.vue  PopUpHandler.vue  SearchBar.vue  SearchDisplay.vue  SideBar.vue  SideNav.vue  ToolTip.vue  Types.ts
src/components/Popups/: FailedHeartbeat.vue
src/components/overlays/: TestOverlay.vue  overlays.css
src/components/popups/: FailedHeartbeat.vue
src/components/tab/: Tab.vue  TabNav.vue
src/layouts/: Applications.vue  Settings.vue
src/loopings/: HeartBeat.vue  Loopings.vue
src/pages/: Home.vue
src/pages/debug/: Debug.vue  Journal.vue
src/pages/overview/: Overview.vue
src/pages/settings/: Certificates.vue  CertsAndKeys.vue  General.vue  Settings.vue
src/pages/utilities/: KeyAndCert.vue
src/panels/: Home.vue  Overview.vue
src/panels/apps/: App.vue  BlobTransferStatus.vue  GenericAppStatus.vue  MessagingStatus.vue  ProtocolOverview.vue
src/panels/apps/blob_transfer/: BlobTransfer.vue  RecvEntry.vue  SendEntry.vue  types.ts
src/panels/apps/gossipsub/: AllTopics.vue  GossipSub.vue  Subscription.vue  Topic.vue  TopicTracker.vue  routes.js  types.ts
src/panels/apps/messaging/: Chat.vue  Contacts.vue  Discover.vue  Inbox.vue  (+9 more)
src/panels/connection/: ConnectedPeerEntry.vue  ConnectedPeers.vue  ConnectionOverview.vue  ConnectionWrapper.vue  Dial.vue  DialEventListener.vue  Layout.vue  Listen.vue  ListenEvenListener.vue  Relay.vue  RelayEntry.vue  SwarmEventListener.vue  routes.js  types.ts
src/panels/network/: Autonat.vue  Kad.vue  KadEventListener.vue  Layout.vue  Mdns.vue  Overview.vue  Upnp.vue  routes.js
src/panels/protocols/: BlobTransferStatus.vue  GenericAppStatus.vue  Messaging.vue  MessagingStatus.vue  ProtocolOverview.vue  routes.js
src/panels/settings/: CertsAndKeys.vue  DeveloperOptions.vue  DialEventListener.vue  DisabledPopups.vue  General.vue  SettingsOverview.vue  SwarmEventListener.vue  routes.js
src/popups/: DefaultPopup.vue
src/router/: index.js  routes.js  settingsPage.js
src/scripts/: cyrb53.js
(+23 files in other folders)
