[package]
name = "owlport_desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
chrono = "0.4"
either = "1"
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1", features = ["sync"] }
libp2p = {path = "../../rust-libp2p/libp2p"}
serde_json = "1.0"
openssl = "*"
openssl-sys = {version="*",features = ["vendored"] }
owlnest = {path = "../../OwlNest/owlnest"}
tracing = "0.1"
tracing-subscriber = "0.3"
whoami = "1.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
