[package]
name = "owlport_desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["drHuangMHT"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
chrono = "0.4"
either = "1"
tauri = { version = "1.7", features = ["clipboard-write-text", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
libp2p = { path = "../../../Owlput/rust-libp2p/libp2p", default-features = false }
serde_json = "1"
openssl = { version = "*" }
openssl-sys = { version = "*", optional = true }
owlnest = { path = "../../OwlNest/owlnest", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
whoami = "1.5"
regex = "1.10"
toml = "*"
anyhow = "*"
dashmap = "6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
debug = []
vendored_openssl = ["openssl/vendored"]
linked_openssl = ["dep:openssl-sys"]
default = ["linked_openssl", "volatile"]
volatile = []
